# spellclash

./: .envrc  .eslintignore  .eslintrc  .gitignore  .prettierignore  .rusty-hook.toml  Cargo.toml  README.md  index.html  justfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src-tauri/benchmarks/: Cargo.toml
src-tauri/benchmarks/benches/: benchmarks.rs
src-tauri/benchmarks/tests/: determinism_tests.rs  main.rs  random_playout_evaluator_tests.rs
src-tauri/database/: Cargo.toml
src-tauri/database/src/: database.rs
src-tauri/src/abilities/: Cargo.toml
src-tauri/src/abilities/src/: lib.rs
src-tauri/src/abilities/src/characteristics/: base_power_toughness.rs  change_text.rs  colors.rs  creature_subtypes.rs  creature_types.rs  mod.rs  power_toughness.rs
src-tauri/src/abilities/src/core/: delayed_trigger.rs  effects.rs  gain_ability.rs  lose_all_abilities.rs  mod.rs  types.rs
src-tauri/src/abilities/src/keyword_abilities/: flying.rs  haste.rs  mod.rs
src-tauri/src/abilities/src/mana/: mod.rs
src-tauri/src/abilities/src/predicates/: card_predicates.rs
src-tauri/src/abilities/src/prompt_helpers/: mod.rs  prompts.rs
src-tauri/src/abilities/src/restrictions/: attack_restrictions.rs  mod.rs
src-tauri/src/abilities/src/targeting/: graveyard_selectors.rs  mod.rs  pair_selector.rs  permanent_selectors.rs  player_set.rs  spell_selectors.rs  targets.rs
src-tauri/src/abilities/src/triggers/: delayed_trigger.rs  mod.rs  state_triggers.rs
src-tauri/src/ai/: Cargo.toml
src-tauri/src/ai/src/: lib.rs
src-tauri/src/ai/src/core/: agent.rs  ai_action.rs  compound_evaluator.rs  first_available_action.rs  game_state_node.rs  mod.rs  selection_algorithm.rs  state_combiner.rs  state_evaluator.rs  state_predictor.rs  win_loss_evaluator.rs
src-tauri/src/ai/src/game/: agents.rs  ai_definitions.rs  definitions.rs  evaluators.rs  game_agent_impl.rs  game_state_node_impl.rs  mod.rs  prompt_state_node_impl.rs
src-tauri/src/ai/src/monte_carlo/: child_score.rs  mod.rs  uct1.rs  (+1 more)
src-tauri/src/cards/all_cards/: .taurignore  Cargo.toml  build.rs
src-tauri/src/cards/cards_d/: Cargo.toml
src-tauri/src/client/: Cargo.toml  tauri.conf.json
src-tauri/src/client/src/: command_line_parser.rs  initialize.rs  logging.rs  main.rs
src-tauri/src/data/: .taurignore  Cargo.toml  build.rs
src-tauri/src/data/src/: lib.rs
src-tauri/src/database/: Cargo.toml
src-tauri/src/database/src/: database.rs  lib.rs  sqlite_database.rs
src-tauri/src/display/: Cargo.toml
src-tauri/src/display/src/: lib.rs
src-tauri/src/game/: Cargo.toml
src-tauri/src/game/src/: game_action_server.rs  leave_game_server.rs  lib.rs  main_menu_server.rs  new_game_server.rs  panel_server.rs  requests.rs  server.rs  server_data.rs
src-tauri/src/invokable_macro/: Cargo.toml
src-tauri/src/invokable_macro/src/: lib.rs
src-tauri/src/primitives/: Cargo.toml
src-tauri/src/primitives/src/: game_primitives.rs  lib.rs
src-tauri/src/rules/: Cargo.toml
src-tauri/src/rules/src/: lib.rs
src-tauri/src/testing/: Cargo.toml
src-tauri/src/testing/src/: lib.rs
src-tauri/src/utils/: Cargo.toml
src-tauri/src/utils/src/: bools.rs  command_line.rs  lib.rs  outcome.rs  paths.rs
src/data/: Cargo.toml
src/data/src/: lib.rs
src/data/src/actions/: game_action.rs  interface_action.rs  mod.rs  new_game_action.rs  user_action.rs
src/data/src/card_definitions/: ability_definition.rs  card_definition.rs  card_name.rs  mod.rs
src/data/src/card_states/: card_kind.rs  card_state.rs  cast_spell_plan.rs  counters.rs  custom_card_state.rs  mod.rs  play_card_plan.rs  stack_ability.rs  stack_ability_state.rs  stack_object.rs  zone_object.rs  zones.rs
src/data/src/core/: actions.rs  card_subtypes.rs  game_state.rs  mana_cost.rs  mod.rs  numerics.rs  primitives.rs  printed_card.rs  widget_id.rs
src/data/src/costs/: cost.rs  mod.rs
src/data/src/decks/: deck.rs
src/data/src/delegates/: ability_context.rs  game_delegates.rs  mod.rs  scope.rs
src/data/src/effects/: effect.rs  mod.rs
src/data/src/game_states/: animation_tracker.rs  combat_state.rs  game_state.rs  game_step.rs  history_data.rs  mod.rs  undo_state.rs
src/data/src/player_states/: mod.rs  player_state.rs  prompt_stack.rs
src/data/src/printed_cards/: card_subtypes.rs  layout.rs  mana_cost.rs  mod.rs  printed_card.rs  printed_primitives.rs
src/data/src/prompts/: card_selection_prompt.rs  choice_prompt.rs  mod.rs  play_cards_prompt.rs  prompt.rs  prompt_manager.rs
src/data/src/state_machines/: mod.rs
src/data/src/text_strings/: mod.rs
src/data/src/users/: mod.rs  user_state.rs
src/oracle/: Cargo.toml
src/oracle/src/: card_database.rs  card_json.rs  cards.json  set_card.rs
src/rules/: Cargo.toml
src/rules/src/: lib.rs
src/rules/src/action_handlers/: actions.rs  combat_actions.rs  mod.rs
src/rules/src/actions/: action.rs  apply_game_action.rs  cast_spell.rs  mod.rs  new_game.rs  requests.rs
src/rules/src/core/: handle_action.rs  mod.rs  new_game.rs
src/rules/src/legality/: can_play_face.rs  legal_actions.rs  legal_combat_actions.rs  mod.rs
src/rules/src/mutations/: cards.rs  deck.rs  library.rs  mod.rs  mutation.rs  permanents.rs  priority.rs
src/rules/src/planner/: cast_spell.rs  legal_cast_choices.rs  mod.rs  spell_planner.rs
src/rules/src/play_cards/: mod.rs  pick_face_to_play.rs  play_card.rs  play_card_choices.rs  play_card_executor.rs
src/rules/src/queries/: card_queries.rs  combat_queries.rs  legal_actions.rs  mod.rs  players.rs  turn.rs
src/rules/src/resolve_cards/: mod.rs  resolve.rs
src/rules/src/spell_casting/: cast_spell.rs  mod.rs  spell_planner.rs
src/rules/src/steps/: step.rs
src/spellclash/: Cargo.toml  Dioxus.toml
src/spellclash/assets/: style.css
src/spellclash/src/: cli.rs  game_client.rs  main.rs  utils.rs
src/spellclash/src/client_actions/: client_action.rs  mod.rs
src/spellclash/src/game_components/: button_component.rs  card_component.rs  game_component.rs  mod.rs
src/spellclash/src/main_app/: cli.rs  game_client.rs  initialize.rs  logging.rs  mod.rs
(+484 files in other folders)
