[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
ai = { path = "../src/ai", version = "0.0.0" }
data = { path = "../src/data", version = "0.0.0" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
