[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
ai = { path = "../src/ai", version = "0.0.0" }
data = { path = "../src/data", version = "0.0.0" }
database = { path = "../src/database", version = "0.0.0" }
rules = { path = "../src/rules", version = "0.0.0" }
utils = { path = "../src/utils", version = "0.0.0" }

uuid = { version = "1.8.0", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
