[package]
name = "data"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
utils = { path = "../utils", version = "0.0.0" }

color-eyre = "0.6.2"
dashmap = "5.4.0"
derive_more = "0.99.17"
enum-iterator = "2.0.0"
enum-kinds = "0.5.1"
enum-map = { version = "2.7.3", features = ["serde"] }
enumset = { version = "1.1.3", features = ["serde"] }
linkme = "0.3.25"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = ["serde1"] }
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
ratatui = { version = "0.26.0", features = ["serde", "macros", "unstable-widget-ref"] }
schemars = "0.8.17"
serde = { version = "1.0.198", features = ["derive"] }
serde_with = "3.8.1"
slotmap = { version = "1.0.7", features = ["serde"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
typed-builder = "0.18.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
