[package]
name = "oracle"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
data = { path = "../data", version = "0.0.0" }
database = { path = "../database", version = "0.0.0" }
utils = { path = "../utils", version = "0.0.0" }

color-eyre = "0.6.2"
enumset = { version = "1.1.3", features = ["serde"] }
mtgjson = "0.2.0"
once_cell = "1.19.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"
uuid = { version = "1.8.0", features = ["v4"] }
