[package]
name = "spellclash"
version = "0.0.0"
edition = "2021"
build = "build.rs"
default-run = "spellclash"

[[bin]]
name = "spellclash"
test = false
doctest = false
bench = false

[dependencies]
all_cards = { path = "../cards/all_cards", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
database = { path = "../database", version = "0.0.0" }
display = { path = "../display", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
server = { path = "../server", version = "0.0.0" }
utils = { path = "../utils", version = "0.0.0" }

better-panic = "0.3.0"
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
dioxus = { version = "0.5.1", features = ["desktop", "router"] }
dioxus-logger = "0.5.0"
directories = "5.0.1"
human-panic = "1.2.0"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
once_cell = "1.19.0"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
typed-builder = "0.18.2"
uuid = { version = "1.8.0", features = ["v4"] }

[build-dependencies]
rusty-hook = "0.11.2"
vergen = { version = "8.2.6", features = ["build", "git", "gitoxide", "cargo"] }
