[package]
name = "abilities"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
data = { path = "../data", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
utils = { path = "../utils", version = "0.0.0" }

async-trait = "0.1.64"
color-eyre = "0.6.2"
enumset = { version = "1.1.3", features = ["serde"] }
once_cell = "1.17.1"
serde_json = "1.0.93"
sled = "0.34.7"
