[package]
name = "client"
version = "0.0.0"
edition = "2021"
default-run = "client"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
utils = { path = "../utils", version = "0.0.0" }

tauri = { version = "=2.0.0-beta.19", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
