[package]
name = "client"
version = "0.0.0"
edition = "2021"
default-run = "client"

[[bin]]
name = "client"
test = false
doctest = false
bench = false

[build-dependencies]
rusty-hook = "0.11.2"
tauri-build = { version = "2.0.0-beta", features = [] }
vergen = { version = "8.2.6", features = ["build", "git", "gitoxide", "cargo"] }

[dependencies]
all_cards = { path = "../cards/all_cards", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
database = { path = "../database", version = "0.0.0" }
display = { path = "../display", version = "0.0.0" }
game = { path = "../game", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
utils = { path = "../utils", version = "0.0.0" }

better-panic = "0.3.0"
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
config = "0.14.0"
directories = "5.0.1"
human-panic = "1.2.0"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
once_cell = "1.19.0"
rusqlite = { version = "0.31.0", features = ["serde_json", "bundled", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "2.0.0-rc.12"
strip-ansi-escapes = "0.2.0"
tauri = { version = "=2.0.0-beta.19", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-specta = { version = "2.0.0-rc.10", features = ["typescript"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-forest = "0.1.6"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
typed-builder = "0.18.2"
uuid = { version = "1.8.0", features = ["v4"] }
