[package]
name = "database"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
data = { path = "../data", version = "0.0.0" }
utils = { path = "../utils", version = "0.0.0" }

async-trait = "0.1.64"
color-eyre = "0.6.2"
once_cell = "1.17.1"
rusqlite = { version = "0.31.0", features = ["serde_json", "bundled", "uuid"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.93"
serde_rusqlite = "0.35.0"
sled = "0.34.7"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4", "serde"] }