[package]
name = "game"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
ai = { path = "../ai", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
database = { path = "../database", version = "0.0.0" }
display = { path = "../display", version = "0.0.0" }
oracle = { path = "../oracle", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
utils = { path = "../utils", version = "0.0.0" }

color-eyre = "0.6.2"
enum-iterator = "2.0.0"
enumset = "1.1.3"
itertools = "0.12.1"
maplit = "1.0.2"
once_cell = "1.19.0"
rand = "0.8.5"
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
serde = { version = "1.0.198", features = ["derive"] }
specta = { version = "2.0.0-rc.12", features = ["uuid"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.37"
uuid = { version = "1.8.0", features = ["v4"] }
