[package]
name = "primitives"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
utils = { path = "../utils", version = "0.0.0" }

derive_more = "0.99.17"
either = { version = "1.11.0", features = ["serde"] }
enum-iterator = "2.0.0"
enum-kinds = "0.5.1"
enum-map = { version = "2.7.3", features = ["serde"] }
enumset = { version = "1.1.3", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_with = "3.8.1"
slotmap = { version = "1.0.7", features = ["serde"] }
specta = { version = "2.0.0-rc.12", features = ["uuid"] }
strum = { version = "0.26.2", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
