[package]
name = "testing"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[[bin]]
name = "nim"
path = "src/nim/nim_main.rs"

[[bin]]
name = "run_matchup"
path = "src/ai_testing/run_matchup_main.rs"

[dependencies]
ai = { path = "../ai", version = "0.0.0" }
all_cards = { path = "../cards/all_cards", version = "0.0.0" }
data = { path = "../data", version = "0.0.0" }
database = { path = "../database", version = "0.0.0" }
game = { path = "../game", version = "0.0.0" }
rules = { path = "../rules", version = "0.0.0" }
utils = { path = "../utils", version = "0.0.0" }

clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
crossbeam = "0.8.4"
enum-iterator = "2.0.0"
enumset = "1.1.3"
itertools = "0.12.1"
maplit = "1.0.2"
once_cell = "1.19.0"
petgraph = "0.6.4"
rand = "0.8.5"
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
rayon = "1.10.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
tree-flat = "0.1.3"
uuid = { version = "1.8.0", features = ["v4"] }
