[package]
name = "utils"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
directories = "5.0.1"
lazy_static = "1.4.0"
once_cell = "1.19.0"
