[package]
name = "cards_d"
version = "0.0.0"
edition = "2021"

[lib]
test = false
doctest = false
bench = false

[dependencies]
abilities = { path = "../../abilities", version = "0.0.0" }
data = { path = "../../data", version = "0.0.0" }
rules = { path = "../../rules", version = "0.0.0" }
utils = { path = "../../utils", version = "0.0.0" }